--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: clojure
-lein: lein2
-script: lein2 cleantest
+lein: lein
+script: lein test
+after_script:
+- echo $INIT_ENV >> ~/init.sh && chmod +x ~/init.sh && . ~/init.sh
+- lein deploy
 notifications:
   email: false
 sudo: false
