--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,12 @@
-test:
+machine:
   pre:
-   - git clone $DOTFILES ~/dotfiles && . ~/dotfiles/init.sh
-  post:
-    - lein circle
+    - wget -O bin/boot https://github.com/boot-clj/boot/releases/download/2.2.0/boot.sh
+    - chmod 755 bin/boot
+    - boot -V
+  environment:
+    BOOT_JVM_OPTIONS: "-Xmx2g"
+test:
+  override:
+    - boot test
+
+ 
