Tweak boot initialization

--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,9 @@ machine:
     - wget -O bin/boot https://github.com/boot-clj/boot/releases/download/2.2.0/boot.sh
     - chmod 755 bin/boot
     - boot -V
+    - boot show -d
   environment:
-    BOOT_JVM_OPTIONS: "-Xmx2g"
+    BOOT_JVM_OPTIONS: "-Xmx3g"
 test:
   override:
     - boot test
