--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,7 @@
 machine:
+ java:
+    version:
+      oraclejdk8
   pre:
     - wget -O bin/boot https://github.com/boot-clj/boot/releases/download/2.2.0/boot.sh
     - chmod 755 bin/boot
